# GmockTesting

./: CMakeLists.txt  README.md  main.cpp  mockused.h  used.cpp  used.h  worker.cpp  worker.h
main_for_run/: main.cpp
